update vignettes and R-CMD-check.yaml

--- a/vignettes/CellCountModeling.Rmd
+++ b/vignettes/CellCountModeling.Rmd
@@ -3,7 +3,7 @@ title: "CellCountModeling"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{CellCountModeling}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{knitr::knitr}
   %\VignetteEncoding{UTF-8}
 ---
 
